[metadata]
    name = nanovna-tools
    author = Ho-Ro
    author_email = Ho-Ro@users.noreply.github.com
    url= http://github.com/Ho-Ro/nanovna-tools
    description = Toolbox for NanoVNA and tinySA
    long_description = Small NanoVNA and tinySA program(s) for scripting and automatisation
    platforms = all
    license = GPLv3
    version = 0.1


[options]
    packages = find:
    scripts =
        nanovna_command.py
        nanovna_capture.py
        nanovna_remote.py
        nanovna_time.py
        nanovna_snp.py
        check_s11.py
        plot_snp.py
        nanovna_config_split.py
        tinysa_scanraw.py
    python_requires = >=3.6, <4
    install_requires = scikit-rf


[options.data_files]
    share/doc/nanovna-tools =
        Changelog
        LICENSE
        README.md
    bin =
        nanovna_command
        nanovna_capture
        nanovna_config.sh
    lib/udev/rules.d =
        60-nano-tiny.rules


[sdist_dsc]
    compat=10
